--- a/EME4xHelpUncompiled/Eme4xHelp/t1_accconst.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_accconst.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
+</head><body>
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 1</h2>
 <blockquote>Element:<b> Access Constraints</b></blockquote>
@@ -12,8 +13,29 @@
 <h3>EPA Requirement/Guidance</h3>
 <blockquote>Provide information about access constraints for the asset to describe decisions made for applying security restrictions. For example, if data are classified as 'High Confidentiality' within the security classification field, include information in this field to identify reason(s) for restricting distribution.
 </blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote>An explanation for the selected “accessLevel” [security classification] including instructions for how to access a restricted file, if applicable, or explanation for why a “non-public” or “restricted public” data asset is not “public,” if applicable.</blockquote>
 <h3>Domain</h3>
-<blockquote>free text</blockquote>
-<br><br><br><br>
+<blockquote>
+Free text is ok, but if applicable, please choose from the standard list of categories for why access to a dataset might be restricted:
+    <ul>
+        <li>EPA Category: Mission Sensitive, NARA Category: Critical Infrastructure</li>
+        <li>EPA Category: Drinking Water Vulnerability Assessments, NARA Category: Critical Infrastructure-Water Assessments</li>
+        <li>EPA Category: Sensitive Drinking Water Related, NARA Category: Critical Infrastructure-Water Assessments</li>
+        <li>EPA Category: IT Security, NARA Category: Information Systems Vulnerability Information</li>
+        <li>EPA Category: Law Enforcement Sensitive, NARA Category: Law Enforcement</li>
+        <li>EPA Category: Attorney Client Privilege, NARA Category: Legal-Privilege</li>
+        <li>EPA Category: Attorney Work Product, NARA Category: Legal-Privilege</li>
+        <li>EPA Category: Deliberative Process Privilege, NARA Category: Legal-Privilege</li>
+        <li>EPA Category: Personally Identifiable Information (PII), NARA Category: Privacy</li>
+        <li>EPA Category: Proprietary, NARA Category: Proprietary</li>
+        <li>EPA Category: Confidential Business Information, NARA Category: Proprietary-Manufacturer</li>
+        <li>EPA Category: Source Selection Information, NARA Category: Proprietary-Source Selection</li>
+    </ul>
+    </blockquote>
+                <br>
+            <br>
+            <br>
+            <br>
 </body>
 </html>
