--- a/EME4xHelpUncompiled/Eme4xHelp/t1_onlink.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_onlink.html
@@ -11,17 +11,29 @@
 </blockquote>
 <h3>EPA Requirement/Guidance</h3>
 <blockquote>Online linkage is not required for EPA minimum requirements.  It is highly encouraged in order to promote reuse of and access to resources. 
+    <strong>Note </strong>- ArcCatalog often populates this field with a local path 
+    to data, or the details of an ArcSDE connection. This conflicts with the FGDC 
+    Guidance as well as Data.gov requirements.&nbsp; If local paths to data or 
+    ArcSDE connection info are truly appropriate to include in a metadata record 
+    (and in almost all cases, they are not appropriate), please place that 
+    information in another section, such as &quot;Supplemental Info&quot;.&nbsp; 
 <br><br>This element should reflect the 'Data Resource Type' classification provided in Tab 3.  For example, if the resource type is listed as 'Live Data and Services', the URL provided in this field should reflect a live data and service URL.  An example of how to document live data and services is provided below.  For more information on resource types, see the 'Data Resource Type' field in Tab 3. </blockquote>
-<blockquote>In general, the inclusion of two online linkage URLs is recommended.<br><ul>
-<li><b>Primary Linkage:</b> the primary location for accessing the data, application, or service.<br>
-<li><b>Secondary Linkage:</b> a website or other location where more information can be obtained about the asset.</blockquote></ul>
+<blockquote>At 3.2.1, to support Data.gov requirements, we are promoting the 
+    following convention, and these linkages are mandatory if applicable. If a type 
+    of link is not applicable, please leave it blank, and please include only the 
+    URL and no other text.<br><ul>
+<li><b>Primary Linkage:</b> URL providing direct access to the downloadable distribution of a dataset.</li>
+<li><b>Secondary Linkage:</b> Endpoint of web service to access dataset. This is typically the REST endpoint for an ArcGIS Server service, but it may also be a WMS GetCapabilities URL or a SOAP WSDL endpoint.</li>
+<li><b>Linkage 3:</b> URL for accessing related documents such as technical information about a dataset, developer documentation, etc.</li>
+<li><b>Linkage 4:</b> Alternative landing page used to redirect user to a contextual, Agency-hosted “homepage” for the Dataset or API when selecting this resource from a metadata catalog. This field is not intended for an agency’s homepage (e.g. www.agency.gov), but rather if a dataset has a human-friendly hub or landing page that users should be directed to for all resources tied to the dataset. This allows agencies to better specify what a visitor receives after selecting one of the agency’s datasets on Data.gov or in third-party mashups.</li>
+<li><b>Other Linkages:</b> Any other URLs related to this resource</li>
+</blockquote></ul>
 <h3>Domain</h3>
 <blockquote>Examples:<br>
-<b>Image Services (WMS Connector):</b><br> 
-"<a href="http://geodata.epa.gov/wmsconnector/com.esri.wms.Esrimap/WasteWaterImage?request=getcapabilities&service=WMS&version=1.1.1">http://edg.epa.gov/wmsconnector/com.esri.wms.Esrimap/WasteWaterImage?request=getcapabilities&amp;service=WMS&amp;version=1.1.1</a>"<br>
-<b>Feature Services (WFS Connector):</b><br>
-"<a href="http://geodata.epa.gov/wfsconnector/com.esri.wfs.Esrimap/NPL_FS?request=getcapabilities&service=wfs">http://edg.epa.gov/wfsconnector/com.esri.wfs.Esrimap/NPL_FS?request=getcapabilities&amp;service=wfs</a>"
-
+<b>Primary Linkage Download URL:</b><br>
+"<a href="https://edg.epa.gov/data/Public/OEI/EPA_Facilities/EPA_Locations.zip">https://edg.epa.gov/data/Public/OEI/EPA_Facilities/EPA_Locations.zip</a>"<br />
+<b>Secondary Linkage Map Service:</b><br> 
+"<a href="http://geodata.epa.gov/arcgis/rest/services/OEI/EPA_Locations/MapServer">http://geodata.epa.gov/arcgis/rest/services/OEI/EPA_Locations/MapServer</a>"<br>
 <br><br><br><br>
 </body>
 </html>
