--- a/EME4xHelpUncompiled/Eme4xHelp/t3_distcnt.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t3_distcnt.html
@@ -11,6 +11,15 @@
 </blockquote>
 <h3>EPA Requirement/Guidance</h3>
 <blockquote>Provide detailed information in this field to identify the person or organization that should be contacted regarding accessing the data or asset.  Contact information within this element may or may not be the same as that listed for the contact for the data and/or metadata.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote>The EME Distribution Contact element includes 3 mandatory Data.gov elements: 
+<ul>
+<li><strong>Publisher</strong> - The plaintext name of the entity publishing this resource, corresponding to the FGDC contact organization.</li>
+<li><strong>Contact Name</strong> - A contact person's name for the asset, corresponding to the FGDC contact person.</li>
+<li><strong>Contact Email</strong> - A valid email address for the contact person listed above. An email address corresponding to a helpdesk or distribution list is an acceptable alternative.</li>
+</ul>
+It does not matter whether the "Primary Person" or "Primary Organization" radio button is selected, as long as the metadata contains all three elements above.  If validation fails, the contact info may need to be edited in the <a href="Help_DB.html">EME database</a> or by opening up the metadata document in a text editor.
+</blockquote>
 <h3>Domain</h3>
 <blockquote>None.</blockquote>
 <br><br><br><br>
