Continued work on help layout.  Rough draft on Tab 1 content.

--- a/EME4xHelpUncompiled/Eme4xHelp/t1_bcDescription.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_bcDescription.html
@@ -5,12 +5,16 @@
 <h2>Interface Element Description: Tab 1</h2>
 <blockquote>Element:<b> Bounding Box Description</b></blockquote>
 <blockquote>Type: text</blockquote>
-<blockquote>Short Name: Description</blockquote>
-<h3>FGDC Definition</h3>
-<blockquote>Filler
-</blockquote>
+<blockquote>ISO Element Name: description</blockquote>
 <h3>EPA Requirement/Guidance</h3>
-<blockquote>Filler</blockquote>
+<blockquote><p>  PLACE GUIDANCE HERE!</p></blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>NA</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>Description of the spatial extent.</blockquote>
+<h3>FGDC Definition</h3>
+<blockquote>NA
+</blockquote>
 <h3>Domain</h3>
 <blockquote>free text</blockquote>
 <br><br><br><br>
