--- a/EME4xHelpUncompiled/Eme4xHelp/t1_dateRevise.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_dateRevise.html
@@ -3,19 +3,22 @@
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 1</h2>
-<blockquote>Element:<b> Calendar Date</b></blockquote>
+<blockquote>Element:<b> Revised Date</b></blockquote>
 <blockquote>Type: date</blockquote>
-<blockquote>Short Name: caldate</blockquote>
-<h3>FGDC Definition</h3>
-<blockquote>The year (and optionally month, or month and day) of the resource.</blockquote>
+<blockquote>ISO Element Name: gco:Date</blockquote>
 <h3>EPA Requirement/Guidance</h3>
 <blockquote>This element is required for EPA geospatial assets as per minimum FGDC standards. Follow FGDC guidance and information provided below for implementation of this field.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>Mandatory Most recent date on which the dataset was changed, updated or modified.</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>Identifies when the resource was examined or re-examined and improved or amended.</blockquote>
+<h3>FGDC Definition</h3>
+<blockquote>The year, month, and day the resource was revised.</blockquote>
 <h3>Domain</h3>
 <ul>
-<li>"Unknown"</li>
-<li>free date</li>
+<li>YYYY-MM-DD</li>
 </ul>
-<blockquote>Note: Date information posted within this field should be documented using the standard date format (YYYY, YYYYMM, or YYYYMMDD, where Y=year, M=month, D=day [no slashes are permitted]), or it may be in the form of free text, such as 'Unknown'. </blockquote>
+<blockquote></blockquote>
 <br><br><br><br>
 </body>
 </html>
