--- a/EME4xHelpUncompiled/Eme4xHelp/t1_eastbc.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_eastbc.html
@@ -5,12 +5,16 @@
 <h2>Interface Element Description: Tab 1</h2>
 <blockquote>Element:<b> East Bounding Coordinate</b></blockquote>
 <blockquote>Type: real</blockquote>
-<blockquote>Short Name: eastbc</blockquote>
+<blockquote>ISO Element Name: eastBoundLongitude</blockquote>
+<h3>EPA Requirement/Guidance</h3>
+<blockquote>Required for EPA geospatial assets as per minimum FGDC standards. Follow FGDC guidance and domain information provided below for implementation of this field.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>NA</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>Easternmost coordinate of the limit of the resource extent (EX_GeographicBoundingBox), expressed in longitude in decimal degrees referenced to WGS 84.</blockquote>
 <h3>FGDC Definition</h3>
 <blockquote>Eastern-most coordinate of the limit of coverage expressed in longitude.
 </blockquote>
-<h3>EPA Requirement/Guidance</h3>
-<blockquote>Required for EPA geospatial assets as per minimum FGDC standards. Follow FGDC guidance and domain information provided below for implementation of this field.</blockquote>
 <h3>Domain</h3>
 <blockquote>-180.0 &lt;= East Bounding Coordinate &lt;= 180.0</blockquote>
 <br><br><br><br>
