--- a/EME4xHelpUncompiled/Eme4xHelp/t1_epathemekey.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_epathemekey.html
@@ -4,10 +4,16 @@
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 1</h2>
 <blockquote>Element:<b> EPA Theme Keyword</b></blockquote>
-<blockquote>Type: text</blockquote>
-<blockquote>Short Name: themekey</blockquote>
+<blockquote>Type: theme</blockquote>
+<blockquote>ISO Element Name: descriptiveKeywords</blockquote>
 <h3>EPA Requirement/Guidance</h3>
 <blockquote>This field is not required for minimum EPA compliancy, but is recommended for EPA personnel and contractors in order to promote metadata consistency across the Agency.  Select one or more EPA keywords (listed below) to describe your data set where applicable.  EPA Keywords should be used to describe EPA-produced geospatial assets.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>Mandatory Tags (or keywords) help users discover your resource; please include terms that would be used by technical and non-technical users.
+</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>Theme keyword identifies a particular subject or topic.
+</blockquote>
 <h3>Domain</h3>
 <ul>
 <li>Agriculture</li>
