--- a/EME4xHelpUncompiled/Eme4xHelp/t1_isothemekey.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_isothemekey.html
@@ -5,12 +5,17 @@
 <h2>Interface Element Description: Tab 1</h2>
 <blockquote>Element:<b> ISO Theme Keyword</b></blockquote>
 <blockquote>Type: text</blockquote>
-<blockquote>Short Name: themekey</blockquote>
+<blockquote>ISO Element Name: topicCategory</blockquote>
+<h3>EPA Requirement/Guidance</h3>
+<blockquote>Inclusion of one or more ISO keywords is required for minimum EPA compliancy in order to comply with inter-Agency sharing initiatives.  The ISO 19115 Topic Category is a general categorization of data sets that is intended to provide data classification consistency across agencies. Select one or more of the basic ISO keywords for a general classification of your data or application.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>Mandatory Tags (or keywords) help users discover your resource; please include terms that would be used by technical and non-technical users.
+</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>High-level geographic data thematic classification to assist in the grouping and search of available geographic data sets.
+</blockquote>
 <h3>FGDC Definition</h3>
 <blockquote>Words describing key aspects of the geospatial asset. </blockquote>
-<h3>EPA Requirement/Guidance</h3>
-<blockquote>Inclusion of one or more ISO keywords is required for minimum EPA compliancy in order to comply with inter-Agency sharing initiatives.  The ISO 19115 Topic Category is a general categorization of data sets that is intended to provide data classification consistency across agencies. Select one or more of the basic ISO keywords for a general classification of your data or application.
-</blockquote>
 <h3>Domain</h3>
 <ul>
 <li>farming</li>
@@ -21,6 +26,7 @@
 <li>elevation</li>
 <li>environment</li>
 <li>geoscientificInformation</li>
+<li>health</li>
 <li>imageryBaseMapsEarthCover</li> 
 <li>intelligenceMilitary</li>
 <li>inlandWaters</li>
@@ -31,7 +37,6 @@
 <li>structure</li>
 <li>transportation</li>
 <li>utilitiesCommunication</li> 
-<li>free text</li></ul>
 <br><br><br><br>
 </body>
 </html>
