--- a/EME4xHelpUncompiled/Eme4xHelp/t1_placekey.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_placekey.html
@@ -4,13 +4,19 @@
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 1</h2>
 <blockquote>Element:<b> Place Keyword</b></blockquote>
-<blockquote>Type: text</blockquote>
-<blockquote>Short Name: placekey</blockquote>
+<blockquote>Type: place</blockquote>
+<blockquote>ISO Element Name: descriptiveKeywords</blockquote>
+<h3>EPA Requirement/Guidance</h3>
+<blockquote>This element is not required for minimum EPA compliancy but is encouraged to promote discovery of assets by location.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>Mandatory Tags (or keywords) help users discover your resource; please include terms that would be used by technical and non-technical users.
+</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>Place keyword identifies a location.
+</blockquote>
 <h3>FGDC Definition</h3>
 <blockquote>Geographic locations characterized by the data set.
 </blockquote>
-<h3>EPA Requirement/Guidance</h3>
-<blockquote>This element is not required for minimum EPA compliancy but is encouraged to promote discovery of assets by location.</blockquote>
 <h3>Domain</h3>
 <blockquote>free text</blockquote>
 <br><br><br><br>
