--- a/EME4xHelpUncompiled/Eme4xHelp/t1_purpose.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_purpose.html
@@ -5,12 +5,15 @@
 <h2>Interface Element Description: Tab 1</h2>
 <blockquote>Element:<b> Purpose</b></blockquote>
 <blockquote>Type: text</blockquote>
-<blockquote>Short Name: purpose</blockquote>
-<h3>FGDC Definition</h3>
-<blockquote>A summary of the intentions with which the data set was developed.
-</blockquote>
+<blockquote>ISO Element Name: purpose</blockquote>
 <h3>EPA Requirement/Guidance</h3>
 <blockquote>Required for EPA geospatial assets as per minimum FGDC standards. Follow FGDC guidance for implementation of this field.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>NA</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>A Summary of the intentions for which the dataset was developed.</blockquote>
+<h3>FGDC Definition</h3>
+<blockquote>A summary of the intentions with which the data set was developed.</blockquote>
 <h3>Domain</h3>
 <blockquote>free text</blockquote>
 <br><br><br><br>
