--- a/EME4xHelpUncompiled/Eme4xHelp/t1_title.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_title.html
@@ -5,7 +5,7 @@
 <h2>Interface Element Description: Tab 1</h2>
 <blockquote>Element:<b> Title</b></blockquote>
 <blockquote>Type: text</blockquote>
-<blockquote>Short Name: title</blockquote>
+<blockquote>ISO Element Name: title</blockquote>
 <h3>EPA Requirement/Guidance</h3>
 <blockquote><p>This element is required for EPA geospatial assets as per minimum FGDC standards. Follow FGDC guidance for implementation of this field.</p>
 <p>The title should fully describe the resource in a way that distinguishes it from other, similar resources, while also staying as concise as possible. To this end, EPA recommends the following template:<br />
