--- a/EME4xHelpUncompiled/Eme4xHelp/t2_fileId.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_fileId.html
@@ -2,12 +2,12 @@
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
 <h1>EPA Metadata Editor (EME)</h1>
-<h2>Interface Element Description: Tab 3</h2>
-<blockquote>Element:<b> Metadata Standard Name</b></blockquote>
+<h2>Interface Element Description: Tab 2</h2>
+<blockquote>Element:<b>File Identifier (UUID)</b></blockquote>
 <blockquote>Type: text</blockquote>
 <blockquote>Short Name: metstdn</blockquote>
 <h3>FGDC Definition</h3>
-<blockquote>The name of the metadata standard used to document the data set.
+<blockquote>Value that uniquely identifies this metadata record (UUID). This identifier is assigned and maintained by the custodian of the metadata record.
 </blockquote>
 <h3>EPA Requirement/Guidance</h3>
 <blockquote>Required for EPA geospatial assets as per minimum FGDC standards. Typically, the value for this field will be 'FGDC Content Standard for Digital Geospatial Metadata'.  Follow FGDC guidance for implementation of this field. </blockquote>
