--- a/EME4xHelpUncompiled/Eme4xHelp/t1_abstract.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_abstract.html
@@ -5,14 +5,16 @@
 <h2>Interface Element Description: Tab 1</h2>
 <blockquote>Element:<b> Abstract</b></blockquote>
 <blockquote>Type: text</blockquote>
-<blockquote>Short Name: abstract</blockquote>
-<h3>FGDC Definition</h3>
-<blockquote>A brief narrative summary of the data set.</blockquote>
+<blockquote>ISO Element Name: abstract</blockquote>
 <h3>EPA Requirement/Guidance</h3>
 <blockquote>This field is required for EPA geospatial assets as per minimum FGDC standards. Typically, this field should be used to provide a general overview about the asset.  Follow FGDC guidance for implementation of this field.</blockquote>
 <h3>Data.gov Requirement/Guidance</h3>
 <blockquote><p>Mandatory human-readable description (e.g., an abstract) with sufficient detail to enable a user to quickly understand whether the asset is of interest.
 </p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>A brief narrative summary of the resource contents.</blockquote>
+<h3>FGDC Definition</h3>
+<blockquote>A brief narrative summary of the resource.</blockquote>
 <h3>Domain</h3>
 <blockquote>free text</blockquote>
 <br><br><br><br>
