--- a/EME4xHelpUncompiled/Eme4xHelp/t1_datePub.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_datePub.html
@@ -4,20 +4,21 @@
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 1</h2>
 <blockquote>Element:<b> Publication Date</b></blockquote>
-<blockquote>Type: text</blockquote>
-<blockquote>Short Name: pubdate</blockquote>
+<blockquote>Type: date</blockquote>
+<blockquote>ISO Element Name: gco:Date</blockquote>
+<h3>EPA Requirement/Guidance</h3>
+<blockquote>This field is required for EPA geospatial assets as per minimum FGDC standards. Follow FGDC guidance and information provided below for implementation of this field.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>Optional Date of formal issuance.</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>Identifies when the resource was issued.</blockquote>
 <h3>FGDC Definition</h3>
 <blockquote>The date when the data set is published or otherwise made available for release.
 </blockquote>
-<h3>EPA Requirement/Guidance</h3>
-<blockquote>This field is required for EPA geospatial assets as per minimum FGDC standards. Follow FGDC guidance and information provided below for implementation of this field.</blockquote>
 <h3>Domain</h3>
 <ul>
-<li>Unknown</li>
-<li>Unpublished material</li>
-<li>free date</li>
+<li>YYYY-MM-DD</li>
 </ul>
-<blockquote>Note: Date information posted within the publication date field should be documented using the standard date format (YYYY, YYYYMM, or YYYYMMDD, where Y=year, M=month, D=day [no slashes are permitted]), or it may be in the form of free text, such as 'Unpublished Material' or 'Unknown'. </blockquote>
 
 <br><br><br><br>
 </body>
