--- a/EME4xHelpUncompiled/Eme4xHelp/t1_northbc.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_northbc.html
@@ -5,12 +5,16 @@
 <h2>Interface Element Description: Tab 1</h2>
 <blockquote>Element:<b> North Bounding Coordinate</b></blockquote>
 <blockquote>Type: real</blockquote>
-<blockquote>Short Name: northbc</blockquote>
+<blockquote>ISO Element Name: northBoundLatitude</blockquote>
+<h3>EPA Requirement/Guidance</h3>
+<blockquote>This field is required for EPA geospatial assets as per minimum FGDC standards. Follow FGDC guidance and domain information provided below for implementation of this field.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>NA</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>Northernmost coordinate of the limit of the dataset extent (EX_GeographicBoundingBox), expressed in latitude in decimal degrees referenced to WGS 84.</blockquote>
 <h3>FGDC Definition</h3>
 <blockquote>Northern-most coordinate of the limit of coverage expressed in latitude.
 </blockquote>
-<h3>EPA Requirement/Guidance</h3>
-<blockquote>This field is required for EPA geospatial assets as per minimum FGDC standards. Follow FGDC guidance and domain information provided below for implementation of this field.</blockquote>
 <h3>Domain</h3>
 <blockquote>-90.0 &lt;= North Bounding Coordinate &lt;= 90.0 </blockquote>
 <br><br><br><br>
