--- a/EME4xHelpUncompiled/Eme4xHelp/t1_update.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t1_update.html
@@ -4,25 +4,31 @@
 <h1>EPA Metadata Editor (EME)</h1>
 <h2>Interface Element Description: Tab 1</h2>
 <blockquote>Element:<b> Maintenance and Update Frequency </b></blockquote>
-<blockquote>Type: text</blockquote>
-<blockquote>Short Name: update</blockquote>
+<blockquote>Type: MD_MaintenanceFrequencyCode</blockquote>
+<blockquote>ISO Element Name: maintenanceAndUpdateFrequency </blockquote>
+<h3>EPA Requirement/Guidance</h3>
+<blockquote>This element is required for EPA geospatial assets as per minimum FGDC standards. Follow FGDC guidance for implementation of this field.</blockquote>
+<h3>Data.gov Requirement/Guidance</h3>
+<blockquote><p>Optional Frequency with which the resource is published.</p></blockquote>
+<h3>ISO Definition</h3>
+<blockquote>The frequency with which modifications and deletions are made to the data after it is first produced.</blockquote>
 <h3>FGDC Definition</h3>
 <blockquote>The frequency with which changes and additions are made to the data set after the initial data set is completed.
 </blockquote>
-<h3>EPA Requirement/Guidance</h3>
-<blockquote>This element is required for EPA geospatial assets as per minimum FGDC standards. Follow FGDC guidance for implementation of this field.</blockquote>
 <h3>Domain</h3>
 <ul>
 <li>"Continually"</li>
 <li>"Daily"</li>
 <li>"Weekly"</li>
+<li>"Fortnightly"</li>
 <li>"Monthly"</li>
+<li>"Quarterly"</li>
+<li>"Biannually"</li>
 <li>"Annually"</li>
 <li>"Unknown"</li>
 <li>"As needed"</li>
 <li>"Irregular"</li>
-<li>"None planned"</li>
-<li>free text</li>
+<li>"Not planned"</li>
 </ul>
 <br><br><br><br>
 </body>
