--- a/EME4xHelpUncompiled/Eme4xHelp/t2_metaAuthor.html
+++ b/EME4xHelpUncompiled/Eme4xHelp/t2_metaAuthor.html
@@ -2,8 +2,8 @@
 <head>
 <link href="mystyle.css" rel="stylesheet" type="text/css" />
 <h1>EPA Metadata Editor (EME)</h1>
-<h2>Interface Element Description: Tab 3</h2>
-<blockquote>Element:<b> Metadata Contact</b></blockquote>
+<h2>Interface Element Description: Tab 2</h2>
+<blockquote>Element:<b> Metadata Author</b></blockquote>
 <blockquote>Type: compound</blockquote>
 <blockquote>Short Name: metc</blockquote>
 <h3>FGDC Definition</h3>
